--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "pkg-name",
+  "name": "cloud-sleep-hub",
   "type": "module",
   "version": "0.0.0",
   "packageManager": "pnpm@7.9.0",
   "description": "",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
+  "author": {
+    "name": "JiatLn",
+    "email": "lne128gene980@163.com"
+  },
   "license": "MIT",
-  "funding": "https://github.com/sponsors/antfu",
-  "homepage": "https://github.com/antfu/pkg-name#readme",
+  "homepage": "https://github.com/jiatln/cloud-sleep-hub#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/antfu/pkg-name.git"
+    "url": "git+https://github.com/jiatln/cloud-sleep-hub.git"
   },
-  "bugs": "https://github.com/antfu/pkg-name/issues",
+  "bugs": "https://github.com/jiatln/cloud-sleep-hub/issues",
   "keywords": [],
   "sideEffects": false,
   "exports": {
@@ -45,6 +47,9 @@
     "start": "esno src/index.ts",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.26.1",
